--- a/index.html
+++ b/index.html
@@ -11,10 +11,19 @@
     <header>
         <div id="intestazione">
             <img id="logo" src="../img/logo.svg" alt="">
-
-
         </div>
 
     </header>
+
+    <main>
+        <section id="top">
+            <h1 id="main-title">Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Burnes Lee</h1>
+            <address class="info">Scritto da <span id="author">The Booleaner</span></address>   
+            <address class="info" class="data" >il 10/10/2020</address>
+
+        </section>
+
+
+    </main>
 </body>
 </html>
