--- a/index.html
+++ b/index.html
@@ -50,7 +50,54 @@
             </ul>
         </div>
 
-s
+        <!-- lorem table -->
+        <div>
+            <table>
+                <thead id="head-table">
+                <tr>
+                    <th class="th-space">Lorem, ipsum dolor.</th>
+                    <th class="th-space">Lorem, ipsum dolor.</th>
+                    <th class="th-space">Lorem, ipsum dolor.</th>
+                </tr>
+            </thead>
+
+            <tbody >
+                <tr id="body-table">
+                    <td >Lorem, ipsum dolor.</td>
+                    <td>Lorem, ipsum dolor.</td>
+                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio architecto explicabo doloremque possimus porro aspernatur adipisci? Voluptas cupiditate dolorem ut voluptate adipisci, officiis praesentium! Ipsum perferendis repudiandae rem esse suscipit!</td>
+
+                </tr>
+
+                <tr>
+                    <td>Lorem, ipsum dolor.</td>
+                    <td>Lorem, ipsum dolor.</td>
+                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio architecto explicabo doloremque possimus porro aspernatur adipisci? Voluptas cupiditate dolorem ut voluptate adipisci, officiis praesentium! Ipsum perferendis repudiandae rem esse suscipit!</td>
+
+                </tr>
+
+                <tr id="body-table">
+                    <td >Lorem, ipsum dolor.</td>
+                    <td>Lorem, ipsum dolor.</td>
+                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio architecto explicabo doloremque possimus porro aspernatur adipisci? Voluptas cupiditate dolorem ut voluptate adipisci, officiis praesentium! Ipsum perferendis repudiandae rem esse suscipit!</td>
+
+                </tr>   
+            </tbody>
+
+            </table>
+
+            <div class="lorem">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit sconsectetur adipisicing elit<span class="important">A quae unde cupiditate beatae, reprehenderit, dolores ipsum corporis ab autem</span>. quod temporibus officiis quos eligendi aut itaque ad dignissimos ex fuga.
+                </p>
+            </div>
+
+            
+            
+
+        </div>
+
+
     </main>
 </body>
 </html>
